--- a/styles.css
+++ b/styles.css
@@ -1,171 +1,230 @@
 /* General styles */
-body, html {
+body {
     margin: 0;
-    padding: 0;
-    font-family: 'Sans', sans-serif;
+    width: 100%;
     scroll-behavior: smooth;
+    font-family: 'Sans', sans-serif;
+
+    header {
+        display: flex;              /* by default: flex-direction: row; */
+        align-items: center;        /* centers (row) vertically */
+        padding: 15px 20px;
+        background-color: #AF5226;
+
+        img {
+            width: 230px;
+            border-radius: 5px;
+        }
+
+         nav {
+            display: flex;              /* by default: flex-direction: row; */
+            gap: 20px;
+            margin-left: auto;
+            font-size: 20px;
+        }
+    }
+
+    section {
+        display: flex;
+        flex-direction: column;     /* Arrange items in a column */
+        padding: 0 3.0%;
+        padding-bottom: 30px;
+        font-size: 18px;
+        color: #AF5226;
+
+        div {
+            padding: 0 3.0%;
+        }
+
+        h2 {
+            margin: 0 auto;     /* centers horizontally */
+            padding: 15px 0;
+            font-family: 'Verdana', sans-serif;
+            font-size: 50px;
+        }
+
+        h3 {
+            padding-top: 15px;
+        }
+
+        p {
+            margin: 0;
+            border-radius: 15px;
+        }
+    }
+
+    footer {
+        display: flex;              /* by default: flex-direction: row; */
+        justify-content: center;    /* centers horizontally */
+        width: 100%;
+        font-size: 14px;
+        color: #F8F2EA;
+        background-color: #AF5226;
+    }
 }
 
-/* Navigation bar styles */
-header {
-    font-size: 1.2em;
-    position: sticky;
-    background-color: #333;
-    padding: 10px 20px;
-    font-family: 'Lato', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 1000;
-}
-
-/* Section styles */
-section {
-    font-size: 1.3em;
-    min-height: 100vh;
-    padding: 20px;
-    color: white;
-}
-
-#title {
-    display: flex;
-}
-
-#title img {
-    width: 200px; /* Set the desired width */
-}
-
-#navbar {
-    display: flex;
-    gap: 20px;
-}
-
+/* header */
 #navbar a {
-    color: white;
+    color: #F8F2EA;
     text-decoration: none;
-    font-weight: bold;
 }
 
 #navbar a:hover {
     text-decoration: underline;
 }
 
+/* Home section */
 #home {
-    background-color: #F5D8B2;
-    color: black;
+    background-color: #F8F2EA;
 }
 
-#overmij {
+#home div {
+    padding: 0 20px;
+}
+
+#home img {
+    width: 300px;
+    margin: 0 auto;          /* Centers horizontally */
+    padding: 15px 0;
+    border-radius: 10px;
+}
+
+/* Over Eva section */
+#overeva {
     background-color: #AF5226;
 }
 
+#overeva h2 {
+    color: #F8F2EA;
+}
+
+#overeva div {
+    display: flex;              /* by default: flex-direction: row; */
+    align-items: center;        /* Centers (row) vertically */
+    justify-content: center;    /* Centers horizontally */
+    gap: 20px;
+}
+
+#overeva p {
+    padding: 15px 20px;
+    background-color: #F8F2EA;
+}
+
+#overeva img {
+    max-width: 450px;
+    border-radius: 10px;
+}
+
+/* Cursussen section */
 #cursussen {
     background-color: #FF914D;
-    min-height: 45vh;
 }
 
+#cursussen h2 {
+    color: #F8F2EA;
+}
+
+#cursussen div {
+    display: flex;
+    flex-direction: column;     /* Arrange items in a column */
+    align-items: center;        /* Centers (column) horizontally */
+}
+
+#cursussen p {
+    padding: 15px 20px;
+    color: #AF5226;
+    background-color: #F8F2EA;
+}
+
+#cursussen img {
+    max-width: 450px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+/* Werkervaring & Opleidingen section */
 #werkervaring {
     background-color: #4C8F30;
-    min-height:0vh;
 }
 
-#opleidingen {
-    background-color: #4C8F30;
-    min-height: 45vh;
+#werkervaring h2 {
+    color: #F8F2EA;
 }
 
+#werkervaring div {
+    display: flex;              /* by default: flex-direction: row; */
+    align-items: center;        /* Centers (row) vertically */
+    justify-content: center;    /* Centers horizontally */
+    gap: 20px;
+}
+
+#werkervaring p {
+    padding: 15px 20px;
+    color: #AF5226;
+    background-color: #F8F2EA;
+}
+
+#werkervaring img {
+    max-width: 450px;
+    margin: 0 auto;     /* centers horizontally */
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+/* Tarieven section */
 #tarieven {
-    background-color: #F5D8B2;
-    color: black;
-    min-height: 62vh;
+    background-color: #F8F2EA;
 }
 
+#tarieven h2 {
+    padding-bottom: 0px;
+    color: #AF5226;
+}
+
+#tarieven div {
+    margin: 0 auto;     /* centers horizontally */
+    padding: 0 20px;
+}
+
+/* Contact section */
 #contact {
     background-color: #AF5226;
-    min-height: 0vh;
 }
 
-/* Content within sections */
-.section-content {
-    max-width: 800px;
-    margin: auto;
+#contact h2 {
+    color: #F8F2EA;
 }
 
-.section-title {
-    font-family: 'Sans', sans-serif;
-    font-size: 2.5em;
-    margin-top: 20px;
-    margin-bottom: 20px;
+#contact div {
+    display: flex;
+    flex-direction: column;     /* Arrange items in a column */
+    align-items: center;        /* Centers (column) horizontally */
+    color: #F8F2EA;
 }
 
-/* Image styles */
-.section-image {
-    display: block;
-    border-radius: 7px; /* Adjust the value for more or less rounding */
-}
-
-#home .section-image {
-    width: 300px;
-    margin: 60px auto;
-}
-
-#overmij .section-image {
-    width: 500px;
-    margin: 40px auto;
-}
-
-#cursussen .section-image {
-    width: 500px;
-    margin: 20px auto;
-}
-
-#contact .section-image {
-    width: 400px;
-    margin: 20px auto;
-}
-
-/* General responsive styles for mobile */
-@media (max-width: 768px) {
-    /* Navigation bar adjustments */
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 15px;
+/* Responsive Styles */
+@media (max-width: 1080px) {
+    #top-header {
+        display: none;
     }
 
-    #title {
-        font-size: 1.2em;
-        margin-bottom: 10px;
+    #overeva div {
+        flex-direction: column;        /* Arrange items in a row */
     }
 
-    #navbar {
-        flex-direction: column;
-        gap: 10px;
+    #overeva img {
+        width: 100%;
     }
 
-    #navbar a {
-        font-size: 1em;
+    #cursussen img {
+        width: 100%;
     }
 
-    .section-title {
-        font-size: 1.5em;
+    #werkervaring div {
+        flex-direction: column;        /* Arrange items in a row */
     }
 
-    /* Image adjustments */
-    .section-image {
-        max-width: 80%; /* Make images slightly smaller on mobile */
-        border-radius: 10px; /* Slightly adjust the radius for smaller screens */
+    #werkervaring img {
+        width: 90%;
     }
-}
-
-/* Footer Styling */
-footer {
-    background-color: #333;
-    color: #ecf0f1;
-    text-align: center;
-    padding: 15px 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    font-size: 14px;
 }
