--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 /* General styles */
+*,
+:before,
+:after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+}
 html {
-  scroll-padding-top: 49px;
 }
 body {
   margin: 0;
