--- a/styles.css
+++ b/styles.css
@@ -17,24 +17,34 @@ body {
   section {
     display: flex;
     flex-direction: column;  /* Arrange items in a column */
-    justify-content: center; /* Centers content vertically */
+    justify-content: flex-start; /* Align content to the top */
     align-items: center;     /* Centers content horizontally */
     padding: 50px 5%; /* Top & Bottom = 50px, Left & Right = 5% */
     font-size: 18px;
     color: #AF5226;
     min-height: 100vh; /* Ensures each section is at least the full screen height */
-    gap: 0.5rem;
-  }
 
-  h2 {
-    margin: 0 auto;   /* centers horizontally */
-    padding: 15px 0;
-    font-family: 'Verdana', sans-serif;
-    font-size: 50px;
-  }
+    article {
+      gap: 20px;
 
-  p {
-    border-radius: 15px;
+      p {
+        padding: 15px 20px;
+        border-radius: 15px;
+      }
+    }
+
+    img {
+      display: block;
+      vertical-align: middle;
+      max-width: 450px;
+      border-radius: 10px;
+    }
+
+    div {
+      display: flex;        /* by default: flex-direction: row; */
+      align-items: center;    /* Centers (row) vertically */
+      justify-content: center;  /* Centers horizontally */
+    }
   }
 
   footer {
@@ -46,6 +56,13 @@ body {
     font-size: 18px;
     color: #F8F2EA;
     background-color: #AF5226;
+  }
+
+  h2 {
+    margin: 0 auto;   /* centers horizontally */
+    padding: 15px 0;
+    font-family: 'Verdana', sans-serif;
+    font-size: 50px;
   }
 }
 
@@ -60,12 +77,12 @@ body {
   z-index: 1000; /* Keeps navbar above other content */
   display: flex;
   align-items: center;
-  padding: 10px 15px;
+  padding: 30px 15px;
   transition: 0.3s;
 }
 #navbar img {
   width: 230px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 #navbar-text {
@@ -93,15 +110,10 @@ body {
   background-color: #F8F2EA;
 }
 
-#home div {
-  padding: 0 20px;
-}
-
-#home img {
+#home-content img {
   width: 300px;
   margin: 0 auto;      /* Centers horizontally */
   padding: 15px 0;
-  border-radius: 10px;
 }
 
 /* Over Eva section */
@@ -113,21 +125,15 @@ body {
   color: #F8F2EA;
 }
 
-#overeva div {
-  display: flex;        /* by default: flex-direction: row; */
-  align-items: center;    /* Centers (row) vertically */
-  justify-content: center;  /* Centers horizontally */
+#overeva-content {
+  display: flex;
+  flex-direction: row;
   gap: 20px;
+  align-items: flex-start; /* or center, baseline, etc. */
 }
 
-#overeva p {
-  padding: 15px 20px;
+#overeva-content p {
   background-color: #F8F2EA;
-}
-
-#overeva img {
-  max-width: 450px;
-  border-radius: 10px;
 }
 
 /* Cursussen section */
@@ -139,21 +145,9 @@ body {
   color: #F8F2EA;
 }
 
-#cursussen div {
-  display: flex;
-  flex-direction: column;   /* Arrange items in a column */
-  align-items: center;    /* Centers (column) horizontally */
-}
-
-#cursussen p {
-  padding: 15px 20px;
+#cursussen-content p {
   color: #AF5226;
   background-color: #F8F2EA;
-}
-
-#cursussen img {
-  max-width: 450px;
-  border-radius: 10px;
 }
 
 /* Werkervaring & Opleidingen section */
@@ -165,23 +159,13 @@ body {
   color: #F8F2EA;
 }
 
-#werkervaring div {
-  display: flex;        /* by default: flex-direction: row; */
-  align-items: center;    /* Centers (row) vertically */
-  justify-content: center;  /* Centers horizontally */
+#werkervaring-content div {
   gap: 20px;
 }
 
-#werkervaring p {
-  padding: 15px 20px;
+#werkervaring-content p {
   color: #AF5226;
   background-color: #F8F2EA;
-}
-
-#werkervaring img {
-  max-width: 450px;
-  margin: 0 auto;   /* centers horizontally */
-  border-radius: 10px;
 }
 
 /* Tarieven section */
@@ -192,11 +176,6 @@ body {
 #tarieven h2 {
   padding-bottom: 0px;
   color: #AF5226;
-}
-
-#tarieven div {
-  margin: 0 auto;   /* centers horizontally */
-  padding: 0 20px;
 }
 
 /* Contact section */
@@ -225,23 +204,11 @@ body {
     display: none;
   }
 
-  #overeva div {
-    flex-direction: column;    /* Arrange items in a row */
+  #overeva-content {
+    flex-direction: column;
   }
 
-  #overeva img {
-    width: 100%;
-  }
-
-  #cursussen img {
-    width: 100%;
-  }
-
-  #werkervaring div {
-    flex-direction: column;    /* Arrange items in a row */
-  }
-
-  #werkervaring img {
-    width: 90%;
+  #werkervaring-content div {
+    flex-direction: column;
   }
 }
