--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     flex-direction: column;  /* Arrange items in a column */
     justify-content: flex-start; /* Align content to the top */
     align-items: center;     /* Centers content horizontally */
-    padding: 50px 5%; /* Top & Bottom = 50px, Left & Right = 5% */
+    padding: 20px 5%; /* Top & Bottom = 50px, Left & Right = 5% */
     font-size: 18px;
     color: #AF5226;
     min-height: 100vh; /* Ensures each section is at least the full screen height */
@@ -31,7 +31,7 @@ body {
 
       p {
         margin: 0;
-        padding: 15px 20px;
+        padding: 15px;
         border-radius: 15px;
       }
     }
@@ -39,7 +39,9 @@ body {
     img {
       display: block;
       vertical-align: middle;
-      max-width: 450px;
+      width: 450px;
+      max-width: 100%;  /* Makes sure the image never overflows */
+      height: auto;  /* Keeps the aspect ratio */
       border-radius: 10px;
     }
 
@@ -182,6 +184,7 @@ body {
 
 #home-content {
   display: block;
+  margin-top: 30px;
 }
 
 #home-content img {
@@ -287,6 +290,10 @@ body {
 
   #hamburger-button {
     display: flex;
+  }
+
+  #home-content {
+    margin-top: 0px;
   }
 
   #overeva-content {
